--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     "typecheck": "echo 'TypeScript checking disabled for JSX project'"
   },
   "dependencies": {
+    "d3": "^7.9.0",
+    "d3-hexbin": "^0.2.2",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "topojson-client": "^3.1.0",
     "zod": "^3.25.76"
   },
   "devDependencies": {
